--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@formkit/auto-animate": "^0.8.2",
     "@headlessui/vue": "^1.7.23",
     "@heroicons/vue": "^2.1.5",
     "vue": "^3.5.12",
